[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "adam"
authors = [{name = "Antonio Kim", email = "antonio_kim@outlook.com"}]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
dependencies = [
    "torch",
    "tiktoken",
    "typer",
    "tqdm"
]

[project.urls]
Home = "https://github.com/antoni0kim/adam"

[project.optional-dependencies]
test = [
    "tox",
    "black",
    "pylint",
    "pytest"
]

[tool.flit.module]
name = "src.app" 